PERSPEC-66 fixes layout bug on chrome, visible border through the left figure

--- a/save/webpages/mir-layout/scss/project_styles/_page_start.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_page_start.scss
@@ -99,10 +99,10 @@
         content: '';
         position:absolute;
         top: 5%;
-        right: -1px;
+        right: -5px;
         height: 90%;
         background-color: $p-dark-white;
-        width: 1px;
+        width: 10px;
       }
     }
   }
